--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,7 +7,10 @@
     <title>Recipes</title>
 </head>
 <body>
-    <p><a href="recipes/ice-cream.html">Ice Cream Recipe</a></p>
-    <p><a href="recipes/salty-ice-cream.html">Salty Ice Cream Recipe</a></p>
+    <h1>Recipes</h1>
+    <ul>
+        <li><a href="recipes/ice-cream.html">Ice Cream</a></li>
+        <li><a href="recipes/salty-ice-cream.html">Salty Ice Cream</a></li>
+    </ul>
 </body>
 </html>
