--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Recipes</h1>
-    <ul>
+    <h1 class="index-h1">Recipes</h1>
+    <ul class="index-ul">
         <li><a href="recipes/ice-cream.html">Ice Cream</a></li>
         <li><a href="recipes/salty-ice-cream.html">Salty Ice Cream</a></li>
     </ul>
