--- a/recipes/ice-cream.html
+++ b/recipes/ice-cream.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cream Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         alt="Ice Cream">
 
     <h2>Description</h2>
-    This shit is pretty bomb.
+    <div>This shit is pretty bomb.</div>
 
     <h2>Ingredients</h2>
     <ul>
